--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -21,8 +21,8 @@ on:
       - '*/spec/fixtures/**'
       - 'CHANGELOG.md'
       - 'common/lib/dependabot/version.rb'
-  schedule:
-    - cron: '41 4 * * 3'
+ # schedule:
+#    - cron: '41 4 * * 3'
 
 jobs:
   analyze:
